apply etag to put and patch